--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 500px;
     height: 100%;
+    margin: 0 auto;
     padding: 20px;
   }
   .vote_area {
@@ -53,7 +55,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 5vw;
+    font-size: min(5vw, 26px);;
     font-weight: bold;
     color: #333;
     cursor: pointer;
