--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,24 +38,33 @@ body {
     height: 100%;
     padding: 20px 10px;
   }
-  #meter {
+  .meter_area {
+    position: relative;
+    top: -100px;
+  }
+  #counter {
+    text-align: center;
   }
   .btn_area {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
-    margin-top: 50px;
+    padding-top: 50px;
   }
   .vote_btn {
     width: calc((100% - 5px) / 2);
     aspect-ratio: 1 / 1;
-    border-radius: 50%;
+    border-radius: 10%;
     background: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: min(5vw, 26px);;
+    font-size: min(5vw, 26px);
     font-weight: bold;
     color: #333;
     cursor: pointer;
