--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
   height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
 .vote_sec {
   height: 100%;
 }
@@ -10,10 +14,10 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../images/bg.jpg") no-repeat center center/cover;
-  aspect-ratio: 270/152;
+  aspect-ratio: 1242/2208;
   z-index: -1;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  opacity: 0.5;
 }
 .vote_sec .inner {
   position: relative;
@@ -54,7 +58,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  padding-top: 50px;
+  padding: 50px 5px 0 5px;
 }
 .vote_sec .vote_btn {
   width: calc((100% - 5px) / 2);
@@ -64,6 +68,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #333;
   font-size: min(5vw, 26px);
   font-weight: bold;
   color: #333;
@@ -71,6 +76,14 @@ body {
 }
 .vote_sec .vote_btn:active {
   background: yellow;
+}
+.vote_sec .vote_btn::after {
+  content: "\f001";
+  margin-left: 2px;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 1em;
+  color: #333;
 }
 
 .score-wrap {
