--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ a {
   height: 100%;
   .bg_image {
     position: absolute;
-    top: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     // 比率
@@ -18,6 +18,15 @@ a {
     z-index: -1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     opacity: 0.5;
+  }
+  h1 {
+    text-align: center;
+    position: relative;
+    top: -40px;
+  }
+  .godhand_img {
+    width: 80%;
+    margin: 0 auto;
   }
   .inner {
     position: relative;
@@ -44,7 +53,8 @@ a {
   }
   .meter_area {
     position: relative;
-    top: -100px;
+    top: -160px;
+    text-align: center;
   }
   #counter {
     text-align: center;
