--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   height: 100vh;
+  max-height: 100vh;
 }
 
 a {
@@ -94,6 +95,20 @@ a {
   font-weight: 900;
   font-size: 1em;
   color: #333;
+}
+
+.godgif {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.godgif img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .score-wrap {
