--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 body {
   height: 100vh;
+  max-height: 100vh;
 }
 
 a {
@@ -96,6 +97,20 @@ a {
       font-size: 1em;
       color: #333;
     }
+  }
+}
+
+.godgif {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  img {
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
