--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,15 @@ a {
   text-decoration: none;
 }
 
+#access_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
 .vote_sec {
   height: 100%;
   .bg_img {
